--- a/Projects/Snake Game/assets/CSS/style.css
+++ b/Projects/Snake Game/assets/CSS/style.css
@@ -3,7 +3,7 @@ body {
 	margin:20px auto;
 	text-align:center;
 	font-size:150% ;
-	background-image:url(./images/wp2409705.jpg);
+	background-image:url(./assets/media/images/wp2409705.jpg);
 	background-color:green;
 	height:800px;
 	background-position:center;
