--- a/Projects/The Drum Kit/Assets/css/styles.css
+++ b/Projects/The Drum Kit/Assets/css/styles.css
@@ -17,31 +17,31 @@ footer {
 }
 
 .w {
-background-image: url("images/crash.png");
+background-image: url("../../Assets/media/images/crash.png");
 }
 
 .a {
-background-image: url("images/kick.png");
+background-image: url("../../Assets/media/images/kick.png");
 }
 
 .s {
-background-image: url("images/snare.png");
+background-image: url("../../Assets/media/images/snare.png");
 }
 
 .d {
-background-image: url("images/tom1.png");
+background-image: url("../../Assets/media/images/tom1.png");
 }
 
 .j {
-background-image: url("images/tom2.png");
+background-image: url("../../Assets/media/images/tom2.png");
 }
 
 .k {
-background-image: url("images/tom3.png");
+background-image: url("../../Assets/media/images/tom3.png");
 }
 
 .l {
-background-image: url("images/tom4.png");
+background-image: url("../../Assets/media/images/tom4.png");
 }
 
 .set {
